<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplyActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_user_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_et_user_msg" />

        <Button
            android:id="@+id/btn_return_noReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="return_noReply"
            android:text="@string/label_btn_return_noReply" />

        <Button
            android:id="@+id/btn_return_withReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="return_withReply"
            android:text="@string/label_btn_return_withReply" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>